fix: make java 11 compatible